# Physics

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  Taskfile.yaml
.github/workflows/: ci.yaml
examples/: matrix.cc  quantity.cc  quantum_circuit.cc
examples/quantity/: quantity.cc
include/QuantumCircuit/: QuantumCircuit.h
include/autodiff/: autodiff.h  autodiff.hpp
include/fraction/: Fraction.h  Template_Fraction.h
include/generator/: generator.hpp
include/linalg/: Matrix.h  Types.h  UtilityClasses.h  Vector.h
include/quantity/: Quantity.h  Quantity_base.h
src/QuantumCircuit/: CircuitView.cc  Circuits.cc  QuantumCircuit.cc
src/autodiff/: autodiff.cc
src/generator/: generator.cc
src/linalg/: Matrix.cc  Vector.cc
src/linalg/Matrix/: Basic.cc  Conversion.cc  LU.cc  Matrix_Macro.h  Operator.cc  Operators.cc  SVD.cc  Stream.cc  Swap.cc  Utilities.h  Utils.cc
test/: Fraction_test.cc  Matrix_test.cc  Quantity_test.cc  QuantumCircuit_test.cc  Vector_test.cc  lapacke_test.cc
tests/: Fraction_test.cc  Matrix_test.cc  Quantity_test.cc  QuantumCircuit_test.cc  autodiff_test.cc  generator_test.cc  lapacke_test.cc  openmp_test.cc
